--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devconnector",
+  "name": "friends connector",
   "version": "1.0.0",
   "description": "Social network for developers",
   "main": "server.js",
@@ -12,7 +12,7 @@
     "heroku-postbuild":
       "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "Brad Traversy",
+  "author": "sampath",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
